# loremaster

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
agents/: __init__.py  combat.py  guard.py  npc.py  orchestrator.py  rules.py  session_service.py  world_state.py
bot/: discord_client.py
mcp_servers/campaign_state_server/: run.py  server.py
mcp_servers/dice_server/: run.py  server.py
mcp_servers/srd_server/: build_srd_data.py  run.py  server.py  srd_data.json
tests/: test_agents.py  test_bot.py  test_mcp_servers.py  test_session_service.py
